Issue 53 - Add tests for all the ProductBuilder arities

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -14,5 +14,6 @@ optIn.annotationNewlines = true
 
 rewrite.rules = [SortImports, RedundantBraces]
 project.excludeFilters = [
-  "zio-config/src/main/scala/zio/config/ProductBuilder.scala"
+  "zio-config/src/main/scala/zio/config/ProductBuilder.scala",
+  "zio-config/src/test/scala/zio/config/ProductBuilderTest.scala"
 ]
