--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -13,3 +13,7 @@ spaces {
 optIn.annotationNewlines = true
 
 rewrite.rules = [SortImports, RedundantBraces]
+project.excludeFilters = [
+  "zio-config/src/main/scala/zio/config/ProductBuilder.scala",
+  "zio-config/src/test/scala/zio/config/ProductBuilderTest.scala"
+]
