--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -288,6 +288,9 @@ workflows:
             - test_213_jdk8_jvm
             - mdoc
           filters:
+            branches:
+              only:
+                - master
             tags:
               only: /^v(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$/
       - release:
