Disable 211 for the time being

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
-scala_211: &scala_211
-  SCALA_VERSION: 2.11.12
+#scala_211: &scala_211
+ # SCALA_VERSION: 2.11.12
 
 scala_212: &scala_212
   SCALA_VERSION: 2.12.10
@@ -196,13 +196,13 @@ jobs:
       - <<: *scala_212
       - <<: *jdk_8
 
-  test_211_jdk8_jvm:
-    <<: *testJVM
-    <<: *machine_ubuntu
-    <<: *machine_resource
-    environment:
-      - <<: *scala_211
-      - <<: *jdk_8
+  #test_211_jdk8_jvm:
+   # <<: *testJVM
+    #<<: *machine_ubuntu
+    #<<: *machine_resource
+    #environment:
+     # - <<: *scala_211
+      #- <<: *jdk_8
 
   test_212_jdk8_jvm:
     <<: *testJVM
@@ -256,12 +256,12 @@ workflows:
           filters:
             tags:
               only: /^v(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$/
-      - test_211_jdk8_jvm:
-          requires:
-            - lint
-          filters:
-            tags:
-              only: /^v(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$/
+  #    - test_211_jdk8_jvm:
+   #       requires:
+    #        - lint
+     #     filters:
+      #      tags:
+       #       only: /^v(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$/
       - test_212_jdk8_jvm:
           requires:
             - lint
@@ -283,7 +283,7 @@ workflows:
       - microsite:
           context: Website
           requires:
-            - test_211_jdk8_jvm
+            #- test_211_jdk8_jvm
             - test_212_jdk8_jvm
             - test_212_jdk11_jvm
             - test_213_jdk8_jvm
