--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -15,5 +15,6 @@ optIn.annotationNewlines = true
 rewrite.rules = [SortImports, RedundantBraces]
 project.excludeFilters = [
   "core/src/main/scala/zio/config/ProductBuilder.scala",
-  "core/src/test/scala/zio/config/ProductBuilderTest.scala"
+  "core/src/test/scala/zio/config/ProductBuilderTest.scala",
+  "magnolia/src/test/scala/zio/config/magnolia/DerivationTest.scala"
 ]
