Clean up the example

--- a/examples/src/main/resources/application.conf
+++ b/examples/src/main/resources/application.conf
@@ -1,3 +1,3 @@
 bootstrapServers="invalid: bootstrap-of-hocon: should have picked up from commandline"
 schemaRegistryUrl="invalid: schemareg-of-hocon: should have picked from system env"
-performcleanup="from hocon source"
+performcleanup="true:hocon"
