--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
       fail-fast: false
       matrix:
         java: ['adopt@1.8', 'adopt@1.11']
-        scala: ['2.11.12', '2.12.13', '2.13.2']
+        scala: ['2.11.12', '2.12.13', '2.13.2', '3.0.0-RC1']
     steps:
       - name: Checkout current branch
         uses: actions/checkout@v2.3.4
@@ -65,6 +65,9 @@ jobs:
       - name: Run tests (2.13)
         if: ${{ startsWith(matrix.scala, '2.13') }}
         run: sbt ++${{ matrix.scala }}! root2-13/test
+      - name: Run tests (3.x)
+        if: ${{ startsWith(matrix.scala, '3') }}
+        run: sbt ++${{ matrix.scala }}! root3/test
 
   ci:
     runs-on: ubuntu-20.04
