Update to the latest standard

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,4 @@
-version = "2.2.1"
+version = "2.7.5"
 maxColumn = 120
 align = most
 continuationIndent.defnSite = 2
@@ -7,12 +7,9 @@ docstrings = JavaDoc
 lineEndings = preserve
 includeCurlyBraceInSelectChains = false
 danglingParentheses = true
-spaces {
-  inImportCurlyBraces = true
-}
 optIn.annotationNewlines = true
 
-rewrite.rules = [SortImports, RedundantBraces]
+rewrite.rules = [RedundantBraces]
 project.excludeFilters = [
   "core/src/main/scala/zio/config/ProductBuilder.scala",
   "core/src/test/scala/zio/config/ProductBuilderTest.scala"
