--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,9 +64,12 @@ jobs:
       - name: Run tests
         if: ${{ !startsWith(matrix.scala, '3.0.') }}
         run: sbt ++${{ matrix.scala }}! test${{ matrix.platform }}
+      - name: Run 2.11 tests
+        if: ${{ !startsWith(matrix.scala, '2.11.') }}
+        run: sbt ++${{ matrix.scala }}! test${{ matrix.platform }}211
       - name: Run dotty tests
         if: ${{ startsWith(matrix.scala, '3.0.') && matrix.platform == 'JVM' }}
-        run: sbt ++${{ matrix.scala }}! testJVM
+        run: sbt ++${{ matrix.scala }}! testDotty
 
   ci:
     runs-on: ubuntu-20.04
