--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,10 @@ env:
 on:
   pull_request:
   push:
-    branches: ['master']
+    branches: [
+        'master',
+        'series/2.x'
+    ]
   release:
     types:
       - published
