--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -15,6 +15,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: olafurpg/setup-scala@v13
-      - run: ./sbt docs/docusaurusPublishGhpages
+   #   - run: ./sbt docs/docusaurusPublishGhpages
         env:
           GIT_DEPLOY_KEY: ${{ secrets.GIT_DEPLOY_KEY }}
