--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,15 +61,21 @@ jobs:
           java-version: ${{ matrix.java }}
       - name: Cache scala dependencies
         uses: coursier/cache-action@v6
-      - name: Run tests
-        if: ${{ !startsWith(matrix.scala, '3.') && !startsWith(matrix.scala, '2.11.') }}
-        run: sbt ++${{ matrix.scala }}! test${{ matrix.platform }}
-      - name: Run 2.11 tests
-        if: ${{ startsWith(matrix.scala, '2.11.') }}
-        run: sbt ++${{ matrix.scala }}! test${{ matrix.platform }}211
-      - name: Run dotty tests
-        if: ${{ startsWith(matrix.scala, '3.') && matrix.platform == 'JVM' }}
-        run: sbt ++${{ matrix.scala }}! testDotty
+      - name: Run JS tests
+        if: ${{ matrix.platform == 'JS' }}
+        run: sbt ++${{ matrix.scala }}! testJS
+      - name: Run 2.11 JVM tests
+        if: ${{ matrix.platform == 'JVM' && startsWith(matrix.scala, '2.11') }}
+        run: sbt ++${{ matrix.scala }}! testJVM211      
+      - name: Run 2.12 JVM tests
+        if: ${{ matrix.platform == 'JVM' && startsWith(matrix.scala, '2.12') }}
+        run: sbt ++${{ matrix.scala }}! testJVM212
+      - name: Run 2.13 JVM tests
+        if: ${{ matrix.platform == 'JVM' && startsWith(matrix.scala, '2.13') }}
+        run: sbt ++${{ matrix.scala }}! testJVM213
+      - name: Run 3.x JVM tests
+        if: ${{ matrix.platform == 'JVM' && startsWith(matrix.scala, '3.') }}
+        run: sbt ++${{ matrix.scala }}! testJVM3x
 
   ci:
     runs-on: ubuntu-20.04
