Avoid ci job depend on lint

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
 
   ci:
     runs-on: ubuntu-20.04
-    needs: [lint, mdoc, test]
+    needs: [mdoc, test]
     steps:
       - name: Report successful build
         run: echo "ci passed"
