--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ on:
       - published
 
 jobs:
-  mdoc:
+  website:
     runs-on: ubuntu-20.04
     timeout-minutes: 60
     steps:
@@ -24,7 +24,7 @@ jobs:
       - name: Cache scala dependencies
         uses: coursier/cache-action@v6
       - name: Check Document Generation
-        run: ./sbt compileDocs
+        run: ./sbt docs/compileDocs
 
   test:
     runs-on: ubuntu-20.04
@@ -64,7 +64,7 @@ jobs:
 
   ci:
     runs-on: ubuntu-20.04
-    needs: [mdoc, test]
+    needs: [website, test]
     steps:
       - name: Report successful build
         run: echo "ci passed"
