--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,7 @@ jobs:
         - ++3.2.2 zioConfigEnumeratumJVM
         - ++2.12.17 zioConfigPureconfigJVM
         - ++2.13.10 zioConfigPureconfigJVM
+        - ++3.2.2 zioConfigPureconfigJVM
         - ++2.12.17 zioConfigDerivationJVM
         - ++2.13.10 zioConfigDerivationJVM
         - ++3.2.2 zioConfigDerivationJVM
