--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
       uses: actions/checkout@v3.3.0
       with:
         fetch-depth: '0'
+    - name: Install libuv
+      run: sudo apt-get update && sudo apt-get install -y libuv1-dev
     - name: Setup Scala
       uses: actions/setup-java@v3.10.0
       with:
@@ -33,11 +35,11 @@ jobs:
         java-version: '17'
         check-latest: true
     - name: Check if the site workflow is up to date
-      run: sbt  checkGithubWorkflow
+      run: sbt -J-XX:+UseG1GC -J-Xmx6g -J-Xms4g -J-Xss16m checkGithubWorkflow
     - name: Check artifacts build process
-      run: sbt  +publishLocal
+      run: sbt -J-XX:+UseG1GC -J-Xmx6g -J-Xms4g -J-Xss16m +publishLocal
     - name: Check website build process
-      run: sbt docs/clean; sbt  docs/buildWebsite
+      run: sbt docs/clean; sbt -J-XX:+UseG1GC -J-Xmx6g -J-Xms4g -J-Xss16m docs/buildWebsite
   lint:
     name: Lint
     runs-on: ubuntu-latest
@@ -47,6 +49,8 @@ jobs:
       uses: actions/checkout@v3.3.0
       with:
         fetch-depth: '0'
+    - name: Install libuv
+      run: sudo apt-get update && sudo apt-get install -y libuv1-dev
     - name: Setup Scala
       uses: actions/setup-java@v3.10.0
       with:
@@ -54,7 +58,7 @@ jobs:
         java-version: '17'
         check-latest: true
     - name: Lint
-      run: sbt  lint
+      run: sbt -J-XX:+UseG1GC -J-Xmx6g -J-Xms4g -J-Xss16m lint
   test:
     name: Test
     runs-on: ubuntu-latest
@@ -108,6 +112,8 @@ jobs:
         - ++2.12.17 zioConfigRefinedJVM
         - ++2.13.10 zioConfigRefinedJVM
     steps:
+    - name: Install libuv
+      run: sudo apt-get update && sudo apt-get install -y libuv1-dev
     - name: Setup Scala
       uses: actions/setup-java@v3.10.0
       with:
@@ -119,7 +125,7 @@ jobs:
       with:
         fetch-depth: '0'
     - name: Test
-      run: sbt  ${{ matrix.scala-project }}/test
+      run: sbt -J-XX:+UseG1GC -J-Xmx6g -J-Xms4g -J-Xss16m ${{ matrix.scala-project }}/test
   ci:
     name: ci
     runs-on: ubuntu-latest
@@ -145,6 +151,8 @@ jobs:
       uses: actions/checkout@v3.3.0
       with:
         fetch-depth: '0'
+    - name: Install libuv
+      run: sudo apt-get update && sudo apt-get install -y libuv1-dev
     - name: Setup Scala
       uses: actions/setup-java@v3.10.0
       with:
@@ -152,7 +160,7 @@ jobs:
         java-version: '17'
         check-latest: true
     - name: Release
-      run: sbt  ci-release
+      run: sbt -J-XX:+UseG1GC -J-Xmx6g -J-Xms4g -J-Xss16m ci-release
       env:
         PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
         PGP_SECRET: ${{ secrets.PGP_SECRET }}
@@ -170,6 +178,8 @@ jobs:
       uses: actions/checkout@v3.3.0
       with:
         fetch-depth: '0'
+    - name: Install libuv
+      run: sudo apt-get update && sudo apt-get install -y libuv1-dev
     - name: Setup Scala
       uses: actions/setup-java@v3.10.0
       with:
@@ -182,7 +192,7 @@ jobs:
         node-version: 16.x
         registry-url: https://registry.npmjs.org
     - name: Publish Docs to NPM Registry
-      run: sbt  docs/publishToNpm
+      run: sbt -J-XX:+UseG1GC -J-Xmx6g -J-Xms4g -J-Xss16m docs/publishToNpm
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
   generate-readme:
@@ -198,6 +208,8 @@ jobs:
       with:
         ref: ${{ github.head_ref }}
         fetch-depth: '0'
+    - name: Install libuv
+      run: sudo apt-get update && sudo apt-get install -y libuv1-dev
     - name: Setup Scala
       uses: actions/setup-java@v3.10.0
       with:
@@ -205,7 +217,7 @@ jobs:
         java-version: '17'
         check-latest: true
     - name: Generate Readme
-      run: sbt  docs/generateReadme
+      run: sbt -J-XX:+UseG1GC -J-Xmx6g -J-Xms4g -J-Xss16m docs/generateReadme
     - name: Commit Changes
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
