--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,7 @@ jobs:
     continue-on-error: false
     strategy:
       fail-fast: false
+      max-parallel: 4
       matrix:
         java:
         - '8'
