--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,13 @@ jobs:
     timeout-minutes: 60
     steps:
       - name: Checkout current branch
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v4.2.0
       - name: Setup Scala and Java
-        uses: olafurpg/setup-scala@v14
+        uses: actions/setup-java@v4.4.0
+        with:
+          distribution: temurin
+          java-version: 17
+          check-latest: true
       - name: Cache scala dependencies
         uses: coursier/cache-action@v6
       - name: Check Document Generation
@@ -32,32 +36,33 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: ['adopt@1.8', 'adopt@1.11']
+        java: ['17']
         scala: ['2.12.20', '2.13.15', '3.4.3']
         platform: ['JS', 'JVM', 'Native']
     steps:
       - name: Checkout current branch
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v4.2.0
         with:
           fetch-depth: 0
       - name: Setup Scala and Java
-        uses: olafurpg/setup-scala@v14
+        uses: actions/setup-java@v4.4.0
         with:
+          distribution: temurin
           java-version: ${{ matrix.java }}
+          check-latest: true
       - name: Cache scala dependencies
         uses: coursier/cache-action@v6
-      - name: Run JS tests
-        if: ${{ matrix.platform == 'JS' && !startsWith(matrix.scala, '3.') }}
-        run: sbt ++${{ matrix.scala }}! testJS
-      - name: Run 2.12 JVM tests
-        if: ${{ matrix.platform == 'JVM' && startsWith(matrix.scala, '2.12') }}
-        run: sbt ++${{ matrix.scala }}! testJVM212
-      - name: Run 2.13 JVM tests
-        if: ${{ matrix.platform == 'JVM' && startsWith(matrix.scala, '2.13') }}
-        run: sbt ++${{ matrix.scala }}! testJVM213
-      - name: Run 3.x JVM tests
-        if: ${{ matrix.platform == 'JVM' && startsWith(matrix.scala, '3.') }}
-        run: sbt ++${{ matrix.scala }}! testJVM3x
+      - name: Run ${{ matrix.scala }} ${{ matrix.platform }} tests
+        run: |
+          SCALA_SUFFIX=""
+          if [[ ${{ matrix.scala }} == 2.12* ]]; then
+            SCALA_SUFFIX="212"
+          elif [[ ${{ matrix.scala }} == 2.13* ]]; then
+            SCALA_SUFFIX="213"
+          elif [[ ${{ matrix.scala }} == 3.* ]]; then
+            SCALA_SUFFIX="3"
+          fi
+          sbt test${{ matrix.platform }}${SCALA_SUFFIX}
 
   ci:
     runs-on: ubuntu-22.04
@@ -73,11 +78,15 @@ jobs:
     if: github.event_name != 'pull_request'
     steps:
       - name: Checkout current branch
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v4.2.0
         with:
           fetch-depth: 0
       - name: Setup Scala and Java
-        uses: olafurpg/setup-scala@v14
+        uses: actions/setup-java@v4.4.0
+        with:
+          distribution: temurin
+          java-version: 17
+          check-latest: true
       - name: Cache scala dependencies
         uses: coursier/cache-action@v6
       - name: Release artifacts
