--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Cache scala dependencies
         uses: coursier/cache-action@v6
       - name: Check Document Generation
-        run: ./sbt docs/compileDocs
+        run: sbt docs/compileDocs
 
   test:
     runs-on: ubuntu-22.04
