--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -27,14 +27,10 @@ jobs:
         distribution: temurin
         java-version: 17
         check-latest: true
-    - name: Check if the README file is up to date
-      run: sbt  docs/checkReadme
-    - name: Check if the site workflow is up to date
+    - name: Check that site workflow is up to date
       run: sbt  docs/checkGithubWorkflow
-    - name: Check artifacts build process
-      run: sbt  +publishLocal
     - name: Check website build process
-      run: sbt docs/clean; sbt  docs/buildWebsite
+      run: sbt  docs/buildWebsite
   publish-docs:
     name: Publish Docs
     runs-on: ubuntu-latest
@@ -62,7 +58,7 @@ jobs:
   generate-readme:
     name: Generate README
     runs-on: ubuntu-latest
-    if: ${{ (github.event_name == 'push') || ((github.event_name == 'release') && (github.event.action == 'published')) }}
+    if: ${{ (github.event_name == 'push') || ((github.event_name == 'release') && (github.event_name == 'published')) }}
     steps:
     - name: Git Checkout
       uses: actions/checkout@v3.3.0
