--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   website:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
       - name: Checkout current branch
@@ -26,13 +26,15 @@ jobs:
           distribution: temurin
           java-version: 17
           check-latest: true
+      - name: Setup sbt
+        uses: sbt/setup-sbt@v1
       - name: Cache scala dependencies
         uses: coursier/cache-action@v6
       - name: Check Document Generation
         run: sbt docs/compileDocs
 
   test:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     strategy:
       fail-fast: false
@@ -51,6 +53,8 @@ jobs:
           distribution: temurin
           java-version: ${{ matrix.java }}
           check-latest: true
+      - name: Setup sbt
+        uses: sbt/setup-sbt@v1
       - name: Cache scala dependencies
         uses: coursier/cache-action@v6
       - name: Run ${{ matrix.scala }} ${{ matrix.platform }} tests
@@ -58,14 +62,14 @@ jobs:
           sbt test${{ matrix.platform }}${{ startsWith(matrix.scala, '2.12') && '212' || (startsWith(matrix.scala, '2.13') && '213' || (startsWith(matrix.scala, '3') && '3' || '')) }}
 
   ci:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     needs: [website, test]
     steps:
       - name: Report successful build
         run: echo "ci passed"
 
   publish:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: [ci]
     if: github.event_name != 'pull_request'
@@ -80,6 +84,8 @@ jobs:
           distribution: temurin
           java-version: 17
           check-latest: true
+      - name: Setup sbt
+        uses: sbt/setup-sbt@v1
       - name: Cache scala dependencies
         uses: coursier/cache-action@v6
       - name: Release artifacts
